// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<table
  className="ProductTable"
>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Price
      </th>
    </tr>
  </thead>
  <tbody>
    <ProductCategoryRow
      category="Sporting Goods"
    />
    <ProductRow
      product={
        Object {
          "category": "Sporting Goods",
          "name": "Football",
          "price": "$49.99",
          "stocked": true,
        }
      }
    />
    <ProductRow
      product={
        Object {
          "category": "Sporting Goods",
          "name": "Baseball",
          "price": "$9.99",
          "stocked": true,
        }
      }
    />
    <ProductRow
      product={
        Object {
          "category": "Sporting Goods",
          "name": "Basketball",
          "price": "$29.99",
          "stocked": false,
        }
      }
    />
    <ProductCategoryRow
      category="Electronics"
    />
    <ProductRow
      product={
        Object {
          "category": "Electronics",
          "name": "iPod Touch",
          "price": "$99.99",
          "stocked": true,
        }
      }
    />
    <ProductRow
      product={
        Object {
          "category": "Electronics",
          "name": "iPhone 5",
          "price": "$399.99",
          "stocked": false,
        }
      }
    />
  </tbody>
</table>
`;

exports[`ProductTable renders 1`] = `
<table
  className="ProductTable"
>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Price
      </th>
    </tr>
  </thead>
  <tbody />
</table>
`;
